Wed Sep 15 07:18:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Extended logging.

        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
          Implemented get_connections

        * tests/CIF/Component/CIF_Component_exec.h:
        * tests/CIF/Component/CIF_Component_exec.cpp:
          Re-generated executor files

        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
          Expanded tests.

Tue Sep 14 12:13:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE.mwc:
          Updated exclude path

Tue Sep 14 11:48:08 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ContentFilterSetting.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantManager.cpp:
        * connectors/dds4ccm/impl/PortStatusListener_T.cpp:
        * connectors/dds4ccm/impl/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/TopicListener_T.cpp:
        * connectors/dds4ccm/impl/Utils.h:
          Status mask will be printed as text (instead of hex).

Tue Sep 14 11:33:21 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao_config_handlers.doxygen:
          Removed this file.

Tue Sep 14 09:42:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * ciao/Servants/Connector_Servant_Impl_Base.h:
        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
          Implemented get_named_receptacles.

        * tests/CIF/Receptacle/client.cpp:
          Enabled get_named_receptacles test.

        * tests/CIF/descriptors/run_test.pl:
          Sleep 2 seconds.

Mon Sep 13 09:57:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Common/CIF_Common.cpp:
        * tests/CIF/Common/CIF_Common.mpc: